# Sillyengine

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/BasicExample/: Main.cpp
include/Engine/Core/: Config.hpp  Engine.hpp  Logger.hpp  Time.hpp
include/Engine/ECS/: Component.hpp
include/Engine/Input/: InputManager.hpp
include/Engine/Math/: Matrix.hpp  Quanternion.hpp  Transform.hpp
include/Engine/Renderer/: Camera.hpp  Material.hpp  Mesh.hpp  OpenGLRenderer.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLWindow.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Window.hpp
include/Engine/Resources/: ResourceManager.hpp
include/Engine/Scene/: Scene.hpp  SceneManager.hpp
src/Engine/Core/: Logger.cpp  Time.cpp
src/Engine/Math/: Matrix.cpp  Quanternion.cpp  Transform.cpp
src/Engine/Renderer/: Material.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLWindow.cpp  Window.cpp
src/Engine/Resources/: ResourceManager.cpp
src/Engine/Scene/: Scene.cpp  SceneManager.cpp
